--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.1",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.1",
     "styled-components": "^5.3.5",
